--- a/applications/namespaces.yaml
+++ b/applications/namespaces.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: mlops-root
+  name: namespaces
   namespace: argocd
 spec:
   project: default
@@ -9,11 +9,10 @@ spec:
   source:
     repoURL: https://github.com/walkingwheelchair/Data_Engineering.git
     targetRevision: main
-    path: applications
+    path: namespaces
 
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
 
   syncPolicy:
     automated:
