server in minio-values geändert zu meinem

--- a/helm-values/minio-values.yaml
+++ b/helm-values/minio-values.yaml
@@ -36,7 +36,7 @@ console:
 ingress:
   enabled: true
   ingressClassName: nginx
-  hostname: minio.timebertt.dski23a.timebertt.dev
+  hostname: minio.student-sepf.dski23a.timebertt.dev
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
   tls: true
